[package]
name = "rgui-sfml"
version = "0.1.0"
edition = "2024"
authors = ["Manuel Hutter (https://github.com/mhutter)"]
license = "MIT"
repository = "https://github.com/mhutter/rgui-sfml"

[dependencies]
rand = "0.9.0"
sfml = { version = "0.24.0", default-features = false, features = ["graphics"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
